Revise contact details and skills in index.html
Updated contact information and skills section.

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                     </ul>
                 </div>
                 <div class="skill-group">
-                    <h3>Other Skills</h3>
+                    <h3>Exploring</h3>
                     <ul>
-                        <li>Cyber Security</li>
+                        <li> Cyber Security</li>
                         <li>UI/UX Design</li>
                     </ul>
                 </div>
@@ -67,18 +67,19 @@
                         <span>Email: allenchandev25@gmail.com</span>
                     </div>
                     <div class="item">
-                        <span>Phone: +91 98765 43210</span>
+                        <span>Phone: +91 9887 432081</span>
                     </div>
                     <div class="item">
-                        <span>Location: Karunya University, Coimbatore, India</span>
+                        <span>Location: Ooty, India</span>
                     </div>
                 </div>
             </div>
         </section>
 
         <footer class="footer">
-            <p>&copy; Allen Chandev.</p>
+            <p>&copy; Allen Chandev</p>
         </footer>
     </div>
 </body>
+
 </html>
