--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
 </head>
 <body>
     <div class="container">
-        <header class="header">
+        <nav class="navbar">
+            <ul class="nav-list">
+                <li class="nav-item"><a href="#home" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
+                <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+                <li class="nav-item"><a href="#certificates" class="nav-link">Certificates</a></li>
+                <li class="nav-item"><a href="#participations" class="nav-link">Participations</a></li>
+                <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
+            </ul>
+        </nav>
+
+        <header class="header" id="home">
             <div class="profile">
                 <div class="profile-img">
                     <img src="allenchandev.jpg" alt="Allen Chandev">
@@ -22,7 +33,7 @@
             </div>
         </header>
 
-        <section class="about">
+        <section class="about" id="about">
             <h2>ABOUT ME</h2>
             <div class="content">
                 <p>I'm pursuing B.Tech Computer Science and Engineering student at Karunya University, passionate about coding. I enjoy exploring how technology works, solving problems through programming, and applying creativity in design.</p>
@@ -30,18 +41,19 @@
             </div>
         </section>
 
-        <section class="skills">
+        <section class="skills" id="skills">
             <h2>SKILLS</h2>
             <div class="skill-list">
                 <div class="skill-group">
-                    <h3>Programming Languages</h3>
+                    <h3>PROGRAMMING LANGUAGES</h3>
                     <ul>
                         <li>Java</li>
                         <li>Python</li>
+                        <li>C</li>
                     </ul>
                 </div>
                 <div class="skill-group">
-                    <h3>Web Development</h3>
+                    <h3>WEB DEVELOPMENT</h3>
                     <ul>
                         <li>HTML5</li>
                         <li>CSS3</li>
@@ -49,25 +61,65 @@
                     </ul>
                 </div>
                 <div class="skill-group">
-                    <h3>Exploring</h3>
+                    <h3>TOOLS</h3>
                     <ul>
-                        <li> Cyber Security</li>
+                        <li>GITHUB</li>
+                        <li>VS CODE</li>
+                        <li>FIGMA</li>
+                    </ul>
+                </div>
+                <div class="skill-group">
+                    <h3>EXPLORING</h3>
+                    <ul>
+                        <li>Cyber Security</li>
                         <li>UI/UX Design</li>
                     </ul>
                 </div>
             </div>
         </section>
 
-        <section class="contact">
+        <section class="certificates" id="certificates">
+            <h2>CERTIFICATES</h2>
+            <div class="certificate-list">
+                <div class="certificate-group">
+                    <h3>HTML ESSENTIALS</h3>
+                    <img src="html.png" alt="HTML Essentials Certificate">
+                </div>
+                <div class="certificate-group">
+                    <h3>ORACLE</h3>
+                    <img src="oracle.png" alt="Oracle Certificate">
+                </div>
+                <div class="certificate-group">
+                    <h3>CSS ESSENTIALS</h3>
+                    <img src="css.png" alt="Css Essentials Certificate">
+                </div>
+            </div>
+        </section>
+
+        <section class="participations" id="participations">
+            <h2>PARTICIPATIONS</h2>
+            <div class="participation-list">
+                <div class="participation-group">
+                    <h3>GK HACKS</h3>
+                    <img src="Gk-hacks.jpg" alt="GK Hacks Certificate">
+                </div>
+                <div class="participation-group">
+                    <h3>CODE MARATHON</h3>
+                    <img src="zivon.jpg" alt="Zivon Certificate">
+                </div>
+            </div>
+        </section>
+
+        <section class="contact" id="contact">
             <h2>CONTACT</h2>
             <div class="content">
-                <p>If you'd like to get in touch, please email me at <a href="mailto:allenchandev25@gmail.com">allenchandev25@gmail.com</a>.</p>
+                <p>If you'd like to get in touch, please email me at <a href="mailto:allenchandev25@gmail.com">allenchandev25@gmail.com</a></p>
                 <div class="info">
                     <div class="item">
                         <span>Email: allenchandev25@gmail.com</span>
                     </div>
                     <div class="item">
-                        <span>Phone: +91 9487 432081</span>
+                        <span>Phone: +91 9487432081</span>
                     </div>
                     <div class="item">
                         <span>Location: Ooty, India</span>
@@ -81,6 +133,4 @@
         </footer>
     </div>
 </body>
-
 </html>
-
