Revise certificates and participations in portfolio
Updated certificate and participation sections with new entries.

--- a/index.html
+++ b/index.html
@@ -77,17 +77,22 @@
                 </div>
             </div>
         </section>
+
         <section class="certificates" id="certificates">
             <h2>CERTIFICATES</h2>
             <div class="certificate-list">
-                <div class="certificate-group">
-                    <h3>HTML ESSENTIALS</h3>
+                 <div class="skill-group">
+                    <h3>CISCO</h3>
+                    <ul>
+                        <li>HTML ESSENTIALS</li>
+                        <li>CSS ESSENTIALS</li>
+                    </ul>
                 </div>
-                <div class="certificate-group">
+                <div class="skill-group">
                     <h3>ORACLE</h3>
-                </div>
-                <div class="certificate-group">
-                    <h3>CSS ESSENTIALS</h3>
+                    <ul>
+                        <li>AI FOUNDATION ASSOCIATE</li>
+                    </ul>
                 </div>
             </div>
         </section>
@@ -96,7 +101,7 @@
             <h2>PARTICIPATIONS</h2>
             <div class="participation-list">
                 <div class="participation-group">
-                    <h3>GK HACKS</h3>
+                    <h3>GOOGLE HACKATHON</h3>
                 </div>
                 <div class="participation-group">
                     <h3>CODE MARATHON</h3>
