--- a/index.html
+++ b/index.html
@@ -73,13 +73,14 @@
                     <ul>
                         <li>Cyber Security</li>
                         <li>UI/UX Design</li>
+                        <li>IOT</li>
                     </ul>
                 </div>
             </div>
         </section>
 
         <section class="certificates" id="certificates">
-            <h2>CERTIFICATES</h2>
+            <h2>CERTIFICATIONS</h2>
             <div class="certificate-list">
                  <div class="skill-group">
                     <h3>CISCO</h3>
@@ -94,6 +95,18 @@
                         <li>AI FOUNDATION ASSOCIATE</li>
                     </ul>
                 </div>
+                 <div class="skill-group">
+                    <h3>GOOGLE</h3>
+                    <ul>
+                        <li>CLOUD DIGITAL LEADER</li>
+                    </ul>
+                </div>
+                <div class="skill-group">
+                    <h3>HACKERRANK</h3>
+                    <ul>
+                        <li>JAVA BASICS</li>
+                    </ul>
+                </div>
             </div>
         </section>
 
@@ -105,6 +118,9 @@
                 </div>
                 <div class="participation-group">
                     <h3>CODE MARATHON</h3>
+                </div>
+                <div class="participation-group">
+                    <h3>SMART INDIA HACKATHON</h3>
                 </div>
             </div>
         </section>
