--- a/index.html
+++ b/index.html
@@ -759,12 +759,17 @@
         <section class="projects" id="projects">
             <h2>Projects</h2>
             <div class="project-list">
-                <div class="project-group">
-                    <h3>Gravity Racer (2D Game)</h3>
-                    <p class="project-tech"><strong>Tech:</strong> C Programming, Raylib</p>
-                    <p>A high-speed 2D car racing game built purely in C using the Raylib library. The game features a unique <strong>Anti-Gravity</strong> mechanic, allowing the car to flip orientation dynamically during the race. Implemented physics logic for collision detection and smooth frame-rate rendering.</p>
-                    <span class="status completed">Completed</span>
-                </div>
+            <div class="project-group">
+                <h3>Car Racing with Gravity Flip</h3>
+                 <p class="project-tech"><strong>Tech:</strong> C, Raylib, Game Development</p>
+                 <p>A 2D racing game with gravity manipulation mechanics built using Raylib. It features:</p>
+                <ul class="project-details">
+                    <li><strong>Gravity Engine:</strong> Dynamic physics system allowing 180-degree gravity flips with matrix transformations, particle effects, and coordinated world adjustments.</li>
+                    <li><strong>Gameplay Systems:</strong> Lane-based movement, pedestrian AI with random crossing behavior, obstacle spawning, and collision detection using Axis-Aligned Bounding Box (AABB).</li>
+                    <li><strong>Game State Management:</strong> Complete game loop with score tracking, game-over logic, restart functionality, and visual indicators for gravity timer and game status.</li>
+                </ul>
+                <span class="status completed">Project Completed</span>
+            </div>
 
                 <div class="project-group">
                     <h3>BillEase - Invoice Generator</h3>
